test/zinc_source/compile_errors/operators/04_float_bitwise.zn
// expected-error: operator '&' requires integer operands

fn main() {
    bad = 1.5 & 1
}
